--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -32,9 +32,16 @@ form hr.sep {
   margin: 0px auto 45px auto;
 }
 
+.output{
+  padding-left: 15px;
+  margin: 0px;
+  color: #0deecc;
+
+}
+
 .group {
   position: relative;
-  margin: 45px 0;
+  margin: 25px 0;
 }
 
 textarea {
@@ -65,14 +72,6 @@ textarea:valid ~ label {
   font-size: 12px;
   color: #0deecc;
 }
-input:focus ~ .bar:before,
-textarea:focus ~ .bar:before {
-  width: 200px;
-}
-
-input[type="password"] {
-  letter-spacing: 0.3em;
-}
 
 label {
   color: #c6c6c6;
@@ -85,11 +84,22 @@ label {
   transition: 300ms ease all;
 }
 
+/* Length of bar showing focus  */
+input:focus ~ .bar:before,
+textarea:focus ~ .bar:before {
+  width: 200px;
+}
+
 .bar {
   position: relative;
   display: block;
   width: 200px;
 }
+
+.half {
+  width: 100px;
+}
+
 .bar:before {
   content: "";
   height: 2px;
@@ -101,6 +111,11 @@ label {
   left: 0%;
 }
 
+.half {
+  width: 100px;
+}
+
+/* All button styles */
 .btn {
   background: #fff;
   color: #959595;
@@ -141,12 +156,10 @@ label {
   background: #e1e1e1;
   color: #8b8b8b;
 }
-
 .btn-box {
   text-align: center;
   margin: 50px 0;
 }
-
 .row {
   display: flex;
   flex-direction: row;
